完成comment接口
